assets/css/style.css
* {
	/* box model */
	box-sizing: border-box;
	margin: 0;
}

/* ----- general body styles -----  */

body {
	/* box model */
	padding-bottom: 20px;

	/* typography */
	font-family: "Open Sans", sans-serif;
	font-size: 16px;
	line-height: 1;
}

.col-7 {
	/* box model */
	padding: 0;
}

/* ----- header styles ----- */

.jumbotron {
	/* box model */
	border-bottom: 10px solid black;
	border-radius: 0;

	/* typography */
	text-align: center;

	/* visual decorations */
	background-color: transparent;
	color: black;
}

/* ----- calendar styles ----- */

.row {
	/* box model */
	border-top: 1px solid white;
	height: 80px;
	margin: 5px 0;
	white-space: pre-wrap;
}

/* --- hour styles --- */
.hour {
	/* box model */
	align-items: center;
	border: 1px dashed black;
	border-top-left-radius: 15px;
	border-bottom-left-radius: 15px;
	display: flex;
	height: 100%;

	/* visual decorations */
	background-color: #ffffff;
	color: #000000;
}

h3 {
	/* box model */
	margin: 0;

	/* typography */
	font-size: 1.2rem;
}

/* --- work (meeting) styles --- */
.work {
	/* box model */
	display: flex;
	flex-direction: column;
	justify-content: center;
}

p {
	/* box model */
	display: flex;
	flex-direction: column;
	height: 100%;
	justify-content: center;
	padding: 10px;
	margin: 0;

	/* typography */
	word-wrap: break-word;

	/* visual decorations */
	color: black;
}

textarea {
	/* box model */
	border: none;
	height: 100%;
	padding: 10px;
	width: 100%;

	/* visual decorations */
	background-color: transparent;
	resize: none;
}

.past {
	/* visual decorations */
	background-color: #d3d3d3;
	color: white;
}

.present {
	/* visual decorations */
	background-color: #ff6961;
	color: white;
}

.future {
	/* visual decorations */
	background-color: #77dd77;
	color: white;
}

/* --- save button styles --- */

.saveBtn {
	/* box model */
	align-items: center;
	border-top-right-radius: 15px;
	border-bottom-right-radius: 15px;
	display: flex;
	justify-content: center;

	/* typography */
	font-size: 1.3rem;

	/* visual decorations */
	background-color: #06aed5;
	color: white;
}

.saveBtn i:hover {
	/* typography */
	font-size: 20px;

	/* visual decorations */
	transition: all 0.3s ease-in-out;
}

